--- a/style.css
+++ b/style.css
@@ -71,13 +71,13 @@ img {
 }
 
 .msg-container {
-    margin: 4rem 0 0;
+    margin: 4.5rem 0 0;
 }
 
 #msg {
-    color: #ff5125; /* #E76F51 */
+    color: #ffffff; /* #E76F51 */
     background-color: #264653;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     text-transform: capitalize;
     padding: 0.5rem 1.5rem;
